[macOS] Non-unified build fixes https://bugs.webkit.org/show_bug.cgi?id=236752

Reviewed by Darin Adler.

* UIProcess/API/Cocoa/_WKWebAuthenticationPanel.mm:
* UIProcess/Cocoa/WebViewImpl.mm:
(WebKit::WebViewImpl::requestTextRecognition):
(WebKit::WebViewImpl::showSafeBrowsingWarning):
(WebKit::toWKRectEdge):
(WebKit::toRectEdges):
* UIProcess/mac/WKSharingServicePickerDelegate.h:



Canonical link: https://commits.webkit.org/247439@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@290084 268f45cc-cd09-0410-ab3c-d52691b4dbfc